<resources>
    <string name="app_name" translatable="false">AmasinGaem</string>
    <string name="txt_greeting">Hello %1$s! :D</string>
    <string name="txt_greeting_default">newcomer</string>

    <!-- RegisterActivity -->

    <string name="txt_registerTitle">Register</string>
    <string name="lbl_name">Name:</string>
    <string name="hint_name">Type your name here</string>
    <string name="lbl_email" translatable="false">Email:</string>
    <string name="hint_email">Type your email here</string>
    <string name="lbl_codeVerification">Code:</string>
    <string name="hint_codeVerification">Type the verification code here</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_verify">VERIFY</string>

    <!-- MainActivity -->

    <string name="txt_playTitle">Play</string>
    <string name="btn_play">Play</string>
    <string name="btn_ranking" translatable="false">Ranking</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About us</string>
    <string name="btn_logout" translatable="false">Log out</string>
    <string name="btn_login" translatable="false">Log in</string>
    <string name="txt_deleteAccountData">Would you like your account data to be deleted?</string>

    <!-- WormyActivity -->

    <string name="new_game">New Game</string>
    <string name="game_over">You lost!</string>

    <!-- RankingActivity -->

    <string name="txt_rankingTitle" translatable="false">Ranking</string>
    <string name="txt_score">Score: %1$d</string>

    <!-- AboutActivity -->

    <string name="txt_sendMessage">SEND</string>

    <!-- SettingsActivity -->

    <string name="txt_settingsTitle">Settings</string>

    <!-- AboutActivity -->

    <string name="txt_aboutTitle">About Us</string>
    <string name="txt_appMadeBy">Application made by: %1$s</string>
    <string name="txt_authorDescription">Author description goes here… some day :D</string>

    <!-- Others -->

    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="hint_message" translatable="false">Type your message here</string>
</resources>
